fix: Message content overflow issue

--- a/packages/extension/src/components/group-chat-message/style.module.scss
+++ b/packages/extension/src/components/group-chat-message/style.module.scss
@@ -69,7 +69,7 @@
   padding-right: 30px;
   padding-bottom: 3px;
   overflow-wrap: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .timestamp {
